--- a/ios/TrainViewer/TrainViewer.xcodeproj/xcshareddata/xcschemes/TrainViewer.xcscheme
+++ b/ios/TrainViewer/TrainViewer.xcodeproj/xcshareddata/xcschemes/TrainViewer.xcscheme
@@ -29,6 +29,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "F35F62A72E51143C004CB01A"
+               BuildableName = "TrainViewerTests.xctest"
+               BlueprintName = "TrainViewerTests"
+               ReferencedContainer = "container:TrainViewer.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
