feat: Complete TrainViewer iOS app development
- Add comprehensive API fetching and departure display logic
- Implement widget with AppIntent support for route selection
- Fix Swift 6 compatibility issues and compilation errors
- Configure app groups for widget data sharing
- Add extensive debug logging for troubleshooting
- Update documentation and configuration files
- Resolve SceneDelegate and Info.plist issues
- Implement background refresh functionality
- Add offline caching capabilities

Changes include:
- Modified multiple service files for API integration
- Updated widget implementation with AppIntents
- Fixed compilation errors and Swift 6 compatibility
- Enhanced SharedStore with debug logging
- Updated project configuration and entitlements
- Added comprehensive API documentation

--- a/ios/TrainViewer/TrainViewer.xcodeproj/xcshareddata/xcschemes/TrainViewer.xcscheme
+++ b/ios/TrainViewer/TrainViewer.xcodeproj/xcshareddata/xcschemes/TrainViewer.xcscheme
@@ -21,6 +21,20 @@
                ReferencedContainer = "container:TrainViewer.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "0A0F8E280A4E6772414A459B"
+               BuildableName = "NextDepartureWidget.appex"
+               BlueprintName = "NextDepartureWidget"
+               ReferencedContainer = "container:TrainViewer.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -44,7 +58,7 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
