--- a/ios/TrainViewer/Support/TrainViewer-Info.plist
+++ b/ios/TrainViewer/Support/TrainViewer-Info.plist
@@ -31,6 +31,8 @@
 				<dict>
 					<key>UISceneConfigurationName</key>
 					<string>Default Configuration</string>
+					<key>UISceneDelegateClassName</key>
+					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 				</dict>
 			</array>
 		</dict>
@@ -56,7 +58,7 @@
 	<string>Used to estimate walking time to your station</string>
 	<key>BGTaskSchedulerPermittedIdentifiers</key>
 	<array>
-		<string>com.trainviewer.refresh</string>
+		<string>com.yourcompany.trainviewer.refresh</string>
 	</array>
 </dict>
 </plist>
