--- a/ios/TrainViewer/TrainViewer.xcodeproj/xcshareddata/xcschemes/NextDepartureWidget.xcscheme
+++ b/ios/TrainViewer/TrainViewer.xcodeproj/xcshareddata/xcschemes/NextDepartureWidget.xcscheme
@@ -16,9 +16,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "0A0F8E280A4E6772414A459B"
-               BuildableName = "NextDepartureWidget.appex"
-               BlueprintName = "NextDepartureWidget"
+               BlueprintIdentifier = "F39ED37B2E6DE425006A91A6"
+               BuildableName = "NextDepartureWidgetnewExtension.appex"
+               BlueprintName = "NextDepartureWidgetnewExtension"
                ReferencedContainer = "container:TrainViewer.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -80,6 +80,13 @@
             ReferencedContainer = "container:TrainViewer.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "_XCWidgetKind"
+            value = "NextDepartureWidgetnew"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
