--- a/ios/TrainViewer/App/Info.plist
+++ b/ios/TrainViewer/App/Info.plist
@@ -4,15 +4,48 @@
 <dict>
 	<key>CFBundleDisplayName</key>
 	<string>TrainViewer</string>
+	<key>CFBundleIdentifier</key>
+	<string>com.trainviewer.app</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Used to estimate walking time to your station</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>Used to estimate walking time to your station</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Voice commands allow you to quickly add routes and get transit information by speaking naturally to your device.</string>
+	<key>INAlternativeAppNames</key>
+	<array>
+		<dict>
+			<key>INAlternativeAppName</key>
+			<string>Train Viewer</string>
+		</dict>
+		<dict>
+			<key>INAlternativeAppName</key>
+			<string>Train App</string>
+		</dict>
+	</array>
 	<key>NSUserNotificationsUsageDescription</key>
 	<string>Get notified when it's time to leave for your train, receive alerts about service disruptions, and stay updated on your journey status.</string>
 	<key>NSCalendarsUsageDescription</key>
 	<string>Access your calendar events to suggest optimal travel times and remind you to leave for class or appointments.</string>
-</dict>
+	<key>CFBundleIconName</key>
+	<string>AppIcon</string>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>Icon-60@2x.png</string>
+		<string>Icon-60@3x.png</string>
+	</array>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconName</key>
+			<string>AppIcon</string>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>Icon-60@2x.png</string>
+				<string>Icon-60@3x.png</string>
+			</array>
+		</dict>
+	</dict>
+	</dict>
 </plist>
