--- a/ios/TrainViewer/App/Info.plist
+++ b/ios/TrainViewer/App/Info.plist
@@ -3,9 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDisplayName</key>
-	<string>TrainViewer</string>
+	<string>BahnBlitz</string>
+	<key>CFBundleExecutable</key>
+	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.trainviewer.app</string>
+	<string>com.bahnblitz.app</string>
+	<key>NSSiriUsageDescription</key>
+	<string>This app uses Siri to provide voice-activated train schedule information even when the app is closed or your device is locked.</string>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>com.bahnblitz.app.trainquery</string>
+	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Used to estimate walking time to your station</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
@@ -16,17 +24,19 @@
 	<array>
 		<dict>
 			<key>INAlternativeAppName</key>
-			<string>Train Viewer</string>
+			<string>Bahn Blitz</string>
 		</dict>
 		<dict>
 			<key>INAlternativeAppName</key>
-			<string>Train App</string>
+			<string>Bahn App</string>
 		</dict>
 	</array>
 	<key>NSUserNotificationsUsageDescription</key>
 	<string>Get notified when it's time to leave for your train, receive alerts about service disruptions, and stay updated on your journey status.</string>
 	<key>NSCalendarsUsageDescription</key>
 	<string>Access your calendar events to suggest optimal travel times and remind you to leave for class or appointments.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Access your photo library to upload and store your semester ticket photos for easy access and display.</string>
 	<key>CFBundleIconName</key>
 	<string>AppIcon</string>
 	<key>CFBundleIconFiles</key>
@@ -47,5 +57,61 @@
 			</array>
 		</dict>
 	</dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>trainviewer</string>
+				<string>bahnblitz</string>
+			</array>
+			<key>CFBundleURLName</key>
+			<string>com.bahnblitz.app</string>
+		</dict>
+	</array>
+	<key>CFBundleInfoDictionaryVersion</key>
+	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>$(PRODUCT_NAME)</string>
+	<key>CFBundlePackageType</key>
+	<string>APPL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0</string>
+	<key>CFBundleVersion</key>
+	<string>1</string>
+	<key>LSRequiresIPhoneOS</key>
+	<true/>
+	<key>UIApplicationSceneManifest</key>
+	<dict>
+		<key>UIApplicationSupportsMultipleScenes</key>
+		<true/>
+		<key>UISceneConfigurations</key>
+		<dict>
+			<key>UIWindowSceneSessionRoleApplication</key>
+			<array>
+				<dict>
+					<key>UISceneConfigurationName</key>
+					<string>Default Configuration</string>
+					<key>UISceneDelegateClassName</key>
+					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
+				</dict>
+			</array>
+		</dict>
 	</dict>
+	<key>UILaunchScreen</key>
+	<dict/>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+	<key>UISupportedInterfaceOrientations~ipad</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+</dict>
 </plist>
