--- a/ios/TrainViewer/NextDepartureWidgetnewExtension.entitlements
+++ b/ios/TrainViewer/NextDepartureWidgetnewExtension.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.trainviewer</string>
+		<string>group.com.bahnblitz.app</string>
 	</array>
 </dict>
 </plist>
