--- a/ios/TrainViewer/TrainViewerWidget/Info.plist
+++ b/ios/TrainViewer/TrainViewerWidget/Info.plist
@@ -3,11 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDisplayName</key>
-	<string>TrainViewerWidget</string>
+	<string>BahnBlitz Widget</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.trainviewer.TrainViewerWidget</string>
+	<string>com.bahnblitz.app.BahnBlitzWidget</string>
 	<key>CFBundleName</key>
-	<string>TrainViewerWidget</string>
+	<string>BahnBlitzWidget</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
